adding AI generated tests
Signed-off-by: MohabMohie <Mohab.MohieElDeen@outlook.com>